cdk.out/ConductorAppStack.template.json
{
 "Resources": {
  "ConductorAppRepositoryE0D29BCF": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "RepositoryName": "conductor-app"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppRepository/Resource"
   }
  },
  "ConductorAppVpc31AF0A25": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/Resource"
   }
  },
  "ConductorAppVpcPublicSubnet1SubnetDE5B3C52": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet1/Subnet"
   }
  },
  "ConductorAppVpcPublicSubnet1RouteTable2CC77948": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet1/RouteTable"
   }
  },
  "ConductorAppVpcPublicSubnet1RouteTableAssociationD9E0865C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ConductorAppVpcPublicSubnet1RouteTable2CC77948"
    },
    "SubnetId": {
     "Ref": "ConductorAppVpcPublicSubnet1SubnetDE5B3C52"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "ConductorAppVpcPublicSubnet1DefaultRoute96249341": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ConductorAppVpcIGW7E5D1E13"
    },
    "RouteTableId": {
     "Ref": "ConductorAppVpcPublicSubnet1RouteTable2CC77948"
    }
   },
   "DependsOn": [
    "ConductorAppVpcVPCGW26AD4789"
   ],
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "ConductorAppVpcPublicSubnet2SubnetC80EFF55": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet2/Subnet"
   }
  },
  "ConductorAppVpcPublicSubnet2RouteTable67A808B3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet2/RouteTable"
   }
  },
  "ConductorAppVpcPublicSubnet2RouteTableAssociationD995F843": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ConductorAppVpcPublicSubnet2RouteTable67A808B3"
    },
    "SubnetId": {
     "Ref": "ConductorAppVpcPublicSubnet2SubnetC80EFF55"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "ConductorAppVpcPublicSubnet2DefaultRoute91755EE7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ConductorAppVpcIGW7E5D1E13"
    },
    "RouteTableId": {
     "Ref": "ConductorAppVpcPublicSubnet2RouteTable67A808B3"
    }
   },
   "DependsOn": [
    "ConductorAppVpcVPCGW26AD4789"
   ],
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "ConductorAppVpcIsolatedSubnet1Subnet8A547764": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet1/Subnet"
   }
  },
  "ConductorAppVpcIsolatedSubnet1RouteTable460BB3AF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet1/RouteTable"
   }
  },
  "ConductorAppVpcIsolatedSubnet1RouteTableAssociation81512F18": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ConductorAppVpcIsolatedSubnet1RouteTable460BB3AF"
    },
    "SubnetId": {
     "Ref": "ConductorAppVpcIsolatedSubnet1Subnet8A547764"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "ConductorAppVpcIsolatedSubnet2Subnet8CAD0ED9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet2/Subnet"
   }
  },
  "ConductorAppVpcIsolatedSubnet2RouteTable0A350A08": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet2/RouteTable"
   }
  },
  "ConductorAppVpcIsolatedSubnet2RouteTableAssociationAB8199DB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ConductorAppVpcIsolatedSubnet2RouteTable0A350A08"
    },
    "SubnetId": {
     "Ref": "ConductorAppVpcIsolatedSubnet2Subnet8CAD0ED9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "ConductorAppVpcIGW7E5D1E13": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConductorAppStack/ConductorAppVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/IGW"
   }
  },
  "ConductorAppVpcVPCGW26AD4789": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ConductorAppVpcIGW7E5D1E13"
    },
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/VPCGW"
   }
  },
  "ConductorAppVpcRestrictDefaultSecurityGroupCustomResourceE9C1C3C7": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "ConductorAppVpc31AF0A25",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "283141160502"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:283141160502:security-group/",
             {
              "Fn::GetAtt": [
               "ConductorAppVpc31AF0A25",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-283141160502-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "ConductorAppCluster745B6EBB": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "conductor-app-cluster"
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppCluster/Resource"
   }
  },
  "ConductorAppSecurityGroup5DE4C320": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Conductor App",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP traffic on port 3001",
      "FromPort": 3001,
      "IpProtocol": "tcp",
      "ToPort": 3001
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppSecurityGroup/Resource"
   }
  },
  "ConductorAppSecurityGroupfromConductorAppStackConductorAppSecurityGroupABFD13F93001CC872E79": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 3001,
    "GroupId": {
     "Fn::GetAtt": [
      "ConductorAppSecurityGroup5DE4C320",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ConductorAppSecurityGroup5DE4C320",
      "GroupId"
     ]
    },
    "ToPort": 3001
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppSecurityGroup/from ConductorAppStackConductorAppSecurityGroupABFD13F9:3001"
   }
  },
  "ConductorAppLogGroup6D5B7D58": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/conductor-app",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppLogGroup/Resource"
   }
  },
  "ConductorAppALB0E1C8499": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ConductorAppSecurityGroup5DE4C320",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "ConductorAppVpcPublicSubnet1SubnetDE5B3C52"
     },
     {
      "Ref": "ConductorAppVpcPublicSubnet2SubnetC80EFF55"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "ConductorAppVpcPublicSubnet1DefaultRoute96249341",
    "ConductorAppVpcPublicSubnet1RouteTableAssociationD9E0865C",
    "ConductorAppVpcPublicSubnet2DefaultRoute91755EE7",
    "ConductorAppVpcPublicSubnet2RouteTableAssociationD995F843"
   ],
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppALB/Resource"
   }
  },
  "ConductorAppALBConductorAppListener25841F49": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ConductorAppTargetGroup0BB488A3"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ConductorAppALB0E1C8499"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppALB/ConductorAppListener/Resource"
   }
  },
  "ConductorAppTaskDefTaskRole014B495E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppTaskDef/TaskRole/Resource"
   }
  },
  "ConductorAppTaskDef35C80564": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "ConductorAppRepositoryE0D29BCF",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "ConductorAppRepositoryE0D29BCF",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "ConductorAppRepositoryE0D29BCF"
         },
         ":latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ConductorAppLogGroup6D5B7D58"
        },
        "awslogs-stream-prefix": "conductor-app",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "ConductorAppContainer",
      "PortMappings": [
       {
        "ContainerPort": 3001,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ConductorAppTaskDefExecutionRole6915E954",
      "Arn"
     ]
    },
    "Family": "ConductorAppStackConductorAppTaskDefB4B52803",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ConductorAppTaskDefTaskRole014B495E",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppTaskDef/Resource"
   }
  },
  "ConductorAppTaskDefExecutionRole6915E954": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppTaskDef/ExecutionRole/Resource"
   }
  },
  "ConductorAppTaskDefExecutionRoleDefaultPolicy6FF4E304": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ConductorAppRepositoryE0D29BCF",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ConductorAppLogGroup6D5B7D58",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ConductorAppTaskDefExecutionRoleDefaultPolicy6FF4E304",
    "Roles": [
     {
      "Ref": "ConductorAppTaskDefExecutionRole6915E954"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppTaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "ConductorAppService2FDC166D": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ConductorAppCluster745B6EBB"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "ConductorAppContainer",
      "ContainerPort": 3001,
      "TargetGroupArn": {
       "Ref": "ConductorAppTargetGroup0BB488A3"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ConductorAppSecurityGroup5DE4C320",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ConductorAppVpcPublicSubnet1SubnetDE5B3C52"
       },
       {
        "Ref": "ConductorAppVpcPublicSubnet2SubnetC80EFF55"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "ConductorAppTaskDef35C80564"
    }
   },
   "DependsOn": [
    "ConductorAppALBConductorAppListener25841F49",
    "ConductorAppTaskDefTaskRole014B495E"
   ],
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppService/Service"
   }
  },
  "ConductorAppTargetGroup0BB488A3": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 3001,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "ConductorAppVpc31AF0A25"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/ConductorAppTargetGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S22rDMAz9lr273hbYB7QdG4XCQlL6OhxHzdQmdvAlpYT8++RcmmyMPfnoSLKOLhGPohf+9CCudiXzy6rEjLepE/LCiPpsQRreJlBri06bG9ue1Gx1DGTE22MtA3+Mtyz2WYky9ZkCF7gZJdo7OIishJmfubW1WqJwqNU9mMUGG+Fg/mOnHBjC78RexW0sOlprR6q/KlCOpSC9QXd7N9rXfbl/iZ0qDFgburG83ZbeUpkQNcE3YQoRlNrLK5xQ4aTzN6OVE6jALLgxNwXToBx6H2DHSl1Qvb0u7rImTFJKYR3KUos8E6VQElXR0KzXdU0D7ge1J9+m9w1qf9jLOKQm1Bgz4YX/QAppppOGhdkxFBWtXw9L699YU14/+gF1HUvAam9CczQuXc1muJU/XbHRDeZgNsICo92Do5MrqMWQ8+Fd7V3HlM6Bn+1jQwf6TCd6togr4 [...]
   },
   "Metadata": {
    "aws:cdk:path": "ConductorAppStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ApplicationURL": {
   "Description": "Public URL for the Conductor App",
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "ConductorAppALB0E1C8499",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "RepositoryUri": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        4,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "ConductorAppRepositoryE0D29BCF",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".dkr.ecr.",
      {
       "Fn::Select": [
        3,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "ConductorAppRepositoryE0D29BCF",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "ConductorAppRepositoryE0D29BCF"
      }
     ]
    ]
   },
   "Export": {
    "Name": "ConductorAppRepositoryUri"
   }
  },
  "ClusterName": {
   "Value": {
    "Ref": "ConductorAppCluster745B6EBB"
   },
   "Export": {
    "Name": "ConductorAppClusterName"
   }
  },
  "VpcId": {
   "Value": {
    "Ref": "ConductorAppVpc31AF0A25"
   },
   "Export": {
    "Name": "ConductorAppVpcId"
   }
  },
  "SecurityGroupId": {
   "Value": {
    "Fn::GetAtt": [
     "ConductorAppSecurityGroup5DE4C320",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "ConductorAppSecurityGroupId"
   }
  },
  "PublicSubnets": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Ref": "ConductorAppVpcPublicSubnet1SubnetDE5B3C52"
      },
      ",",
      {
       "Ref": "ConductorAppVpcPublicSubnet2SubnetC80EFF55"
      }
     ]
    ]
   },
   "Export": {
    "Name": "ConductorAppPublicSubnets"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
